--- a/frontend/src/Styling/index.css
+++ b/frontend/src/Styling/index.css
@@ -58,6 +58,8 @@ body {
 }
 
 .home {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
   text-align: center;
   padding: 100px;
   background-color: rgba(192, 192, 192, 0.6);
