--- a/frontend/src/Styling/index.css
+++ b/frontend/src/Styling/index.css
@@ -63,13 +63,26 @@ body {
   text-align: center;
   padding: 100px;
   background-color: rgba(192, 192, 192, 0.6);
-  border: .5px solid black;
+  border: .25px solid black;
   margin-left: 30px;
   margin-right: 30px;
 }
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-left {
+  width: 25%;
+}
+
+.flex-right {
+  width: 75%;
+  padding-left: 100px;
+}
 
 img{
-  height:150px;
+  height:175px;
 }
 .label {
   float: center;
