--- a/frontend/src/Styling/index.css
+++ b/frontend/src/Styling/index.css
@@ -1,5 +1,5 @@
 header {
-  background-color: white;
+  background-color: #ffffff;
   position: fixed;
   top: 0;
   left: 0;
@@ -26,10 +26,10 @@ header li {
 body {
   margin: 0;
   display: center;
+  background-color: #52796F;
   font-family: -apple-system, BlinkMacSystemFont, Georgia, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url(/images/plants.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -47,8 +47,8 @@ body {
 .footer {
   padding: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Georgia, serif;
-  text-shadow: 0 0 3px #1d4226, 0 0 5px #2d0f9b;
-  color: #b3ceb9;
+  color: #000000;
+  background-color: #d8f3dc;
   position: relative;
   bottom: 0;
   left: 0;
@@ -62,7 +62,7 @@ body {
   font-size: large;
   text-align: center;
   padding: 100px;
-  background-color: rgba(192, 192, 192, 0.6);
+  background-color: rgba(255, 255, 255, 0.886);
   border: .25px solid black;
   margin-left: 30px;
   margin-right: 30px;
@@ -226,3 +226,5 @@ a:hover {
   /* Changes the dropdown button color once it is hovered on as well */
   background-color: #60966c;
 }
+
+
