Populated DB + Analytics Page Done

--- a/frontend/src/Styling/index.css
+++ b/frontend/src/Styling/index.css
@@ -147,14 +147,14 @@ textarea {
 .linechart {
   border: none;
   color: white;
-  padding: 10px 30px;
+  padding: 10px;
+  padding-left: 50px;
   text-align: center;
   text-decoration: none;
   display: block;
-  font-size: 15px;
+  font-size: 35px;
   text-shadow: 0 0 3px #86b992, 0 0 5px #77b0ca;
-  padding: 200px;
-  background: rgba(218, 229, 151, 0.2);
+  background: rgba(196, 196, 196, 0.2);
 }
 .piechart {
   border: none;
